[gd_scene load_steps=18 format=3 uid="uid://be235ud4p3wg8"]

[ext_resource type="Script" path="res://Enemles/Bat.gd" id="1_6me0j"]
[ext_resource type="Texture2D" uid="uid://vgshxta31onu" path="res://Art/Enemies/Bat.png" id="1_6pygy"]
[ext_resource type="Texture2D" uid="uid://c41i18edlxir7" path="res://Art/Shadows/SmallShadow.png" id="2_uqq1h"]
[ext_resource type="PackedScene" uid="uid://gnd1wq8lr7cm" path="res://Areas/hurt_box.tscn" id="3_r5ly0"]
[ext_resource type="PackedScene" uid="uid://bsproxm53ey13" path="res://Resource/states.tscn" id="5_7pqou"]
[ext_resource type="PackedScene" uid="uid://cp14jyw818tk0" path="res://Areas/player_detection_zone.tscn" id="6_kgbsi"]
[ext_resource type="PackedScene" uid="uid://c8j3kggnlk3qg" path="res://Areas/hit_box.tscn" id="7_kww1j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tyyqa"]
atlas = ExtResource("1_6pygy")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c70pk"]
atlas = ExtResource("1_6pygy")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qho5"]
atlas = ExtResource("1_6pygy")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r35k"]
atlas = ExtResource("1_6pygy")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bruqb"]
atlas = ExtResource("1_6pygy")
region = Rect2(64, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_a7m8c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyyqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c70pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qho5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r35k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bruqb")
}],
"loop": true,
"name": &"Fly",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sb1y7"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lf4qy"]
radius = 6.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gjgcj"]
radius = 48.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1j3jb"]
radius = 6.0

[node name="Bat" type="CharacterBody2D"]
z_index = 1
collision_layer = 8
collision_mask = 2
script = ExtResource("1_6me0j")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_a7m8c")
animation = &"Fly"
autoplay = "Fly"
frame_progress = 0.0487567
offset = Vector2(0, -5)

[node name="ShadowSprite" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("2_uqq1h")
offset = Vector2(0, 4.055)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sb1y7")

[node name="HurtBox" parent="." instance=ExtResource("3_r5ly0")]
collision_layer = 32
collision_mask = 64
invincibillity_time = 0.5

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -14)
rotation = -3.14159
shape = SubResource("CapsuleShape2D_lf4qy")

[node name="states" parent="." instance=ExtResource("5_7pqou")]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource("6_kgbsi")]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color(1, 1, 1, 0.211765)
shape = SubResource("CircleShape2D_gjgcj")

[node name="HitBox" parent="." instance=ExtResource("7_kww1j")]
collision_layer = 128
collision_mask = 16

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, -20)
shape = SubResource("CircleShape2D_1j3jb")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="no_health" from="states" to="." method="_on_state_no_health"]

[editable path="HurtBox"]
[editable path="PlayerDetectionZone"]
[editable path="HitBox"]
